--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ flutter:
   # This is required for using `dart:ffi`.
   # All these are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
-#  plugin:
-#    platforms:
-#      android:
-#        package: com.hunnam.app.ad
-#        pluginClass: AdPlugin
-#      ios:
-#        pluginClass: AdPlugin
+  plugin:
+    platforms:
+      android:
+        package: com.hunnam.app.ad
+        pluginClass: AdPlugin
+      ios:
+        pluginClass: AdPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
